fix: fixed activation screen error
Modified the "press any key" screen to be
dismissed on a keypress event instead of a keydown
event. This change ensures that keys like CTRL,
SHIFT, and ALT are ignored, preventing an issue
where the browser did not recognize them as user
interactions, which caused an audio error.

Additionally, corrected a spelling error in the
CSS class name, changing "blurred" to "blurry".

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -120,7 +120,7 @@ h1 {
   pointer-events: none;
 }
 
-.blurred {
+.blurry {
   filter: blur(10px);
 }
 
